--- a/lobby.html
+++ b/lobby.html
@@ -21,8 +21,8 @@
       <div class="nav--list">
         <a href="lobby.html">
           <h3 id="logo">
-            <img src="./images/logo.png" alt="Site Logo" />
-            <span>Mumble</span>
+            <img src="./images/gift-logo.png" alt="Site Logo" />
+            <span>GIFT-inView</span>
           </h3>
         </a>
       </div>
