index design updated

--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
     <title>Gift-InView</title>
     <link rel="stylesheet" href="./styles/common.css">
     <link rel="stylesheet" href="./styles/index.css">
+    <link
+    rel="stylesheet"
+    type="text/css"
+    media="screen"
+    href="styles/main.css" />
 </head>
 
 <body>
-    <div class="header">
-        <div class="logo">
-            <h1>logo-section</h1>
+    <header id="nav">
+        <div class="nav--list">
+          <a href="lobby.html">
+            <h3 id="logo">
+              <img src="./images/gift-logo.png" alt="Site Logo" />
+              <span>GIFT-inView</span>
+            </h3>
+          </a>
         </div>
-        <div class="nav-bar">
-            <h3>nav-bar section</h3>
-        </div>
-    </div>
+  
+        
+      </header>
     <div class="body-container body-margin">
         <div id="left-innerbox0" class="common-innerbox0 borderMeron">
             
